# dotfiles

./: .gitignore  .tmux.conf  README.md  tasks.md
.emacs.d/: config.org  init.el  init_local.el
.github/workflows/: opencode.yml
fish/: config.fish  fish_plugins
nix/: .gitignore  .sops.yaml  AGENTS.md  CLAUDE.md  DICTATION-SYSTEM-FINAL.md  DICTATION-TROUBLESHOOTING.md  LAZY_NVIM_NIX_INTEGRATION_PLAN.md  NEOVIM_KEYBINDINGS.md  NEOVIM_MIGRATION_COMPLETE.md  README-dictation.md  README.md  README.org  flake.nix  nvim_cleanup.md  result  setup-kde-shortcuts.md  system_shared.nix  tasks.md  test-dictation-stop.sh  test-plugins.sh
nix/home/: flake.nix  home.nix  home.nix.backup
nix/home/apps/: aider.nix  dictation.nix  pyproject.toml
nix/home/apps/aider/: .aider.conf.yml  .aider.model.settings.yml  aider-overlay.nix  aider-package.nix  aider.nix  pyproject.toml
nix/home/apps/litellm/: config.yaml  litellm.nix
nix/home/apps/nerd-dictation/: nerd-dictation-package.nix  nerd-dictation.nix
nix/home/apps/s3drive/: s3drive-package.nix  s3drive.nix
nix/overlays/: whisper-cuda.nix
nix/secrets/: ai-api-keys.yaml  cloudflare-api-token.txt  cloudflare-api-token.yaml  ddns-updater-config.yaml  litellm_secrets.sops.yaml  minio-credentials.txt  nextcloud-admin-pass.txt  nextcloud-db-pass.txt  nextcloud-secrets.yaml  nextcloud-user-pass-spiros.txt  pia-credentials.sops.yaml
nix/systems/: lenovo_x1_extreme.nix  msi_gs66.nix  msi_ms16.nix  precision_t5600.nix  (+2 more)
secrets/: litellm_secrets.sops.yaml
systems/: litellm-docker.nix
vim/: README.md
zsh/: .p10k.zsh  .zshrc
(+56 files in other folders)
