[tool.poetry]
name = "aider-project"
version = "0.1.0"
description = "A project to install aider tool"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
configargparse = "*"
GitPython = "*"
jsonschema = "*"
rich = "*"
prompt_toolkit = "*"
backoff = "*"
pathspec = "*"
diskcache = "*"
grep_ast = "*"
packaging = "*"
sounddevice = "*"
soundfile = "*"
beautifulsoup4 = "*"
PyYAML = "*"
Pillow = "*"
diff-match-patch = "*"
pypandoc = "*"
litellm = "*"
flake8 = "*"
importlib_resources = "*"
networkx = "<3.3"
scipy = "<1.14"
tree-sitter = "==0.21.3"
importlib-metadata = "<8.0.0"
numpy = "<2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
